Fixed Abous us alignmenet, addded officer information

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -88,7 +88,7 @@
     width: 100%;
     height: 100%;
     padding-top: 10em;
-
+    padding-bottom:5em;
     background: #2d3549;
 }
 
